objects/AccountFieldMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AccountField__c</fullName>
        <label>AccountField</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectFieldName__c</fullName>
        <label>ObjectFieldName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>AccountFieldMapping</label>
</CustomObject>